--- a/Dashboard/src/app/components/transactions-view/transactions-view.component.html
+++ b/Dashboard/src/app/components/transactions-view/transactions-view.component.html
@@ -9,7 +9,7 @@
     <tbody>
         <tr *ngFor="let t of transactions$ | async">
             <td>{{ t.value }}</td>
-            <td>{{ t.transactionType.type }}</td>
+            <td>{{ t.transactionType }}</td>
             <td>{{ t.transactionDate | date:"MM/dd/yyyy"}}</td>
         </tr>
     </tbody> 
